# driftwood

./: .gitignore  README.md  debug_node.py  dinghy.py  logs.txt  pyproject.toml  raft.py  ruff.toml  tick_raft.py
dinghy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
raft/: __main__.py  cli.py  messages.py  node.py  server.py
tests/: conftest.py  test_integration_basic.py  test_perf.py  test_persistence.py  test_persistence_integration.py
tests/helpers/: assertions.py  cluster.py
